--- a/landingpage.html
+++ b/landingpage.html
@@ -10,7 +10,13 @@
 
     <header id="header"> 
         <img src="logosony.png" id="header-img">
-        <nav id="nav-bar"></nav>
+        <nav id="nav-bar">
+            <ul>
+                <li class="nav-link"><a href="#Features">Features</li>
+                <li class="nav-link"><a href="#Howitworks">How it works</li>
+                <li class="nav-link"><a href="#faq">FAQ</li>
+            </ul>
+        </nav>
     </header>
 
 
