Added information and video

--- a/landingpage.html
+++ b/landingpage.html
@@ -12,12 +12,65 @@
         <img src="logosony.png" id="header-img">
         <nav id="nav-bar">
             <ul>
-                <li class="nav-link"><a href="#Features">Features</li>
-                <li class="nav-link"><a href="#Howitworks">How it works</li>
-                <li class="nav-link"><a href="#faq">FAQ</li>
+                <li class="nav-link"><a href="#Features">Features</a></li>
+                <li class="nav-link"><a href="#Howitworks">How it works</a></li>
+                <li class="nav-link"><a href="#faq">FAQ</a></li>
             </ul>
         </nav>
     </header>
 
+    <section id="sect">
+        <h2>Mirrorless, high-end cameras</h2>
+        <form id="form" action="https://www.freecodecamp.com/email-submit">
+            <input name="email"
+            id="email"
+            type="email"
+            placeholder="Enter your email address"
+            requiered />
+            <input id="submit" type="submit" value="Submit!" class="btn"/>
+        </form>
+    </section>
 
+<div>
+    <section id="Features">
+        <h2>Powerful generation</h2>
+        <p>The Sony a6000 offers a major change related to the sensor, the new 24.3 megapixel Exmor APS HD CMOS sensor
+            has on-chip phase detection like its predecessor but covers a much larger portion of the frame. Sony 
+            promises better AF tracking, especially when shooting continuously. The a6000 uses Sony's latest
+            image processor, Bionz X, which boasts with improved detail and smarter noise reduciton.
+
+        </p>
+
+        <h2>No more NEX</h2>
+        <p>
+            The a6000 sits in the same place as Sony's mirrorless lineup and offers broadly
+            the same features, but also adds a number of significant features while loosing the NEX moniker.
+            The resolution and processor have been bumped up and the most noteable feature of the a6000 is its updated autofocus-system.
+        </p>
+
+        <h2>Key features</h2>
+        <ul>
+            <li>24.3 megapixel APS-C CMOS sensor</li>
+            <li>Bionz X image processor</li>
+            <li>Hybrid AF system with 25 contras-detect and 179 phase-detect points</li>
+            <li>Built-in flash + Multi-interface shoe</li>
+            <li>11 fps continous shooting with subject-tracking</li>
+            <li>3-inch tilting LCD with 921.600 dots</li>
+            <li>OLED electronic viewfiender @ 1.44M dots</li>
+            <li>Diffraction correction, area-specific noise reduction and detail reporoduction technology</li>
+            <li>Full HD video recording @ 1080/60p and 24p</li>
+            <li>Wi-Fi and NFC capability, for transfering images directly to your phone or laptop</li>
+        </ul>
+        
+    </section>
+</div>
+
+<section id="Howitworks">
+    <iframe width="580" height="326" src="https://www.youtube.com/embed/qzTwXGO9Km4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+</section>
+<section id="faq">
+    <h2>Frequently asked question</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta, voluptatem amet voluptatibus iste error sequi soluta quod ad labore odio totam architecto cupiditate perspiciatis consequuntur aspernatur illum nam eos vero?</p>
+     </section>
 </body>
