--- a/landingpage.html
+++ b/landingpage.html
@@ -1,3 +1,6 @@
+<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+
+
 <!DOCTYPE html>
 <head>
 
@@ -64,13 +67,17 @@
         
     </section>
 </div>
-
+<div>
 <section id="Howitworks">
-    <iframe width="580" height="326" src="https://www.youtube.com/embed/qzTwXGO9Km4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe id="video" width="580" height="326" src="https://www.youtube.com/embed/qzTwXGO9Km4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </section>
+</div>
+<div>
 <section id="faq">
     <h2>Frequently asked question</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta, voluptatem amet voluptatibus iste error sequi soluta quod ad labore odio totam architecto cupiditate perspiciatis consequuntur aspernatur illum nam eos vero?</p>
-     </section>
+</section>
+
+</div>
 </body>
