styling the page

--- a/landingpage.html
+++ b/landingpage.html
@@ -7,20 +7,24 @@
     <title>
         Sony A6000 Camera
     </title>
+    <link rel="stylesheet" href="landingpagecss.css"/>
 </head>
 
 <body>
-
+<div id="page-wrapper">
     <header id="header"> 
+        <div class="logosony">
         <img src="logosony.png" id="header-img">
+    </div>
         <nav id="nav-bar">
             <ul>
-                <li class="nav-link"><a href="#Features">Features</a></li>
-                <li class="nav-link"><a href="#Howitworks">How it works</a></li>
+                <li class="nav-link"><a href="#features">Features</a></li>
+                <li class="nav-link"><a href="#fieldtest">Testing the a6000</a></li>
                 <li class="nav-link"><a href="#faq">FAQ</a></li>
             </ul>
         </nav>
     </header>
+</div>
 
     <section id="sect">
         <h2>Mirrorless, high-end cameras</h2>
@@ -34,8 +38,9 @@
         </form>
     </section>
 
+    <div class="container"></div>
 <div>
-    <section id="Features">
+    <section id="features">
         <h2>Powerful generation</h2>
         <p>The Sony a6000 offers a major change related to the sensor, the new 24.3 megapixel Exmor APS HD CMOS sensor
             has on-chip phase detection like its predecessor but covers a much larger portion of the frame. Sony 
@@ -68,7 +73,7 @@
     </section>
 </div>
 <div>
-<section id="Howitworks">
+<section id="fieldtest">
     <iframe id="video" width="580" height="326" src="https://www.youtube.com/embed/qzTwXGO9Km4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </section>
@@ -80,4 +85,5 @@
 </section>
 
 </div>
+
 </body>
