--- a/landingpage.html
+++ b/landingpage.html
@@ -26,8 +26,8 @@
     </header>
 </div>
 
-    <section id="sect">
-        <h2>Mirrorless, high-end cameras</h2>
+    <section id="sect" class="container">
+        <h1>Mirrorless, high-end cameras</h1>
         <form id="form" action="https://www.freecodecamp.com/email-submit">
             <input name="email"
             id="email"
@@ -38,7 +38,7 @@
         </form>
     </section>
 
-    <div class="container"></div>
+    <div class="container">
 <div>
     <section id="features">
         <h2>Powerful generation</h2>
@@ -57,7 +57,7 @@
         </p>
 
         <h2>Key features</h2>
-        <ul>
+        <ul id="keylist">
             <li>24.3 megapixel APS-C CMOS sensor</li>
             <li>Bionz X image processor</li>
             <li>Hybrid AF system with 25 contras-detect and 179 phase-detect points</li>
@@ -72,18 +72,28 @@
         
     </section>
 </div>
-<div>
+</div>
+<br>
+
+<div class="fieldtest">
 <section id="fieldtest">
     <iframe id="video" width="580" height="326" src="https://www.youtube.com/embed/qzTwXGO9Km4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </section>
 </div>
 <div>
-<section id="faq">
+<section id="faq" class="container">
     <h2>Frequently asked question</h2>
+    <br>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta, voluptatem amet voluptatibus iste error sequi soluta quod ad labore odio totam architecto cupiditate perspiciatis consequuntur aspernatur illum nam eos vero?</p>
 </section>
 
+</div>
+
+<div>
+    <footer id="footer">
+
+    </footer>
 </div>
 
 </body>
