getting there, working on the formplacement

--- a/landingpage.html
+++ b/landingpage.html
@@ -25,9 +25,11 @@
         </nav>
     </header>
 </div>
+<div class="container">
 
-    <section id="sect" class="container">
-        <h1>Mirrorless, high-end cameras</h1>
+<div class="grid">
+    <section id="sect" class="">
+        <h2>Mirrorless, high-end cameras</h2>
         <form id="form" action="https://www.freecodecamp.com/email-submit">
             <input name="email"
             id="email"
@@ -37,9 +39,8 @@
             <input id="submit" type="submit" value="Submit!" class="btn"/>
         </form>
     </section>
-
-    <div class="container">
-<div>
+</div>
+<div class="grid">
     <section id="features">
         <h2>Powerful generation</h2>
         <p>The Sony a6000 offers a major change related to the sensor, the new 24.3 megapixel Exmor APS HD CMOS sensor
@@ -74,14 +75,15 @@
 </div>
 </div>
 <br>
-
+<div class="grid">
 <div class="fieldtest">
 <section id="fieldtest">
     <iframe id="video" width="580" height="326" src="https://www.youtube.com/embed/qzTwXGO9Km4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </section>
 </div>
-<div>
+</div>
+<div class="grid">
 <section id="faq" class="container">
     <h2>Frequently asked question</h2>
     <br>
