--- a/landingpage.html
+++ b/landingpage.html
@@ -18,9 +18,9 @@
     </div>
         <nav id="nav-bar">
             <ul>
-                <li class="nav-link"><a href="#features">Features</a></li>
-                <li class="nav-link"><a href="#fieldtest">Testing the a6000</a></li>
-                <li class="nav-link"><a href="#faq">FAQ</a></li>
+                <li><a class="nav-link" href="#features">Features</a></li>
+                <li><a class="nav-link" href="#fieldtest">Testing the a6000</a></li>
+                <li><a class="nav-link" href="#faq">FAQ</a></li>
             </ul>
         </nav>
     </header>
